src/main.less
@color_1: #fff;
/* Mixin */
.border-radius (@radius: 5px) {
  -webkit-border-radius: @radius;
  -moz-border-radius: @radius;
  border-radius: @radius;
}

.padding(@top:0, @right:0, @bottom:0, @left:0) {
  padding-top: @top;
  padding-right: @right;
  padding-bottom: @bottom;
  padding-left: @left;
}

.padding-left(@val:0) {
  padding-left: @val;
}

.text-orange {
  color: #f96302 !important;
}

.pad-l-0 {
  padding-left: 0 !important;
}

.pad-l-4 {
  padding-left: 4px !important;
}

.padding-l-7 {
  padding-left: 7px;
}

.padding-l-20 {
  padding-left: 20px;
}

.padding-l-15 {
  padding-left: 15px;
}

.padding-l-10 {
  padding-left: 10px;
}

.padding-l-30 {
  padding-left: 30px;
}

.pad-r-0 {
  padding-right: 0;
}

.padding-t-7 {
  padding-top: 7px;
}

// modals
.modal-open {
  .modal-backdrop {
    display: none;
  }
  .modal {
    top: 7.5%;
  }
  .modal-dialog {
    margin: 0 !important;
  }
  .modal-content {
    height: 100vh;
    border-radius: 0;
  }
  .modal-body {
    padding-top: 0px !important;
    height: 94%;
    overflow-y: scroll;
  }
  .modal-backdrop {
    background: #fff !important;
  }

  .modal-backdrop.in {
    opacity: 0.7 !important;
  }

  .modal-header {
    padding: 15px 15px 0 0 !important;
    border: none !important;
  }
}

.modal-open .details-modal.modal {
  height: auto;
  top: 30%;
  width: 84%;
  left: 16.5%;
  border: none;
  box-shadow: none;
  height: 64%;
}

// positions
.ptn-abs {
  position: absolute;
}

.ptn-rel {
  position: relative;
}

.row {
  margin-right: -15px;
  margin-left: -15px;
}

@background_color_1: #f2eeee;

.btn-default {
  background-color: @background_color_1 !important;
}

nav {
  background-color: #ccc;
}

img {
  max-width: 100%;
}

.no-p-l {
  padding-left: 0 !important;
}
.no-p-r {
  padding-right: 0 !important;
}

.app-nav + .router-wrapper {
  padding: 0 10px 60px 70px;
  width: 100vw;
  overflow: hidden;
}

.tile {
  background: #fff;
  border-radius: 3px;
  box-shadow: 0 0 5px #ccc;
}

// margins

.margin-b-5 {
  margin-bottom: 5px;
}

.margin-b-10 {
  margin-bottom: 10px !important;
}

.margin-b-15 {
  margin-bottom: 15px !important;
}

.margin-b-20 {
  margin-bottom: 20px !important;
}

.margin-b-30 {
  margin-bottom: 30px !important;

}

.margin-b-40 {
  margin-bottom: 40px !important;
}

.margin-r-10 {
  margin-right: 10px !important;
}

.margin-r-0 {
  margin-right: 0 !important;
}

.margin-t-10 {
  margin-top: 10px !important;
}

.margin-t-15 {
  margin-top: 15px !important;
}

.margin-t-66 {
  margin-top: 66px !important
}

.margin-t-100 {
  margin-top: 100px !important;
}

.margin-t-5 {
  margin-top: 5px;
}

.mgn-l-3 {
  margin-left: 3px !important;
}

.margin-t-20 {
  margin-top: 20px !important;
}

.margin-top-30 {
  margin-top: 30px !important;
}

/* paddings */
.padding10 {
  padding: 10px;
}

.padding20 {
  padding: 20px;
}

.padding-t-7 {
  padding-top: 7px;
}

.padding-l-7 {
  padding-left: 7px;
}

.padding-r-7 {
  padding-right: 7px !important;
}

.padding-t-10 {
  padding-top: 10px;
}

.padding-t-15 {
  padding-top: 15px;
}

.padding-b-10 {
  padding-bottom: 10px;
}

.padding-0 {
  padding: 0 !important;
}

.padding-l-3 {
  padding-left: 3px;
}

.padding-0-r {

  padding-right: 0 !important;

}

.padding-0-l {
  padding-left: 0 !important;
}

// colors
.bg-orange {
  background-color: #f96302;
}

.transform-rotate-90 {
  transform: rotate(90deg);
}

/* font faces
@font-face {
    font-family: Roboto;
    src: url(./assets/fonts/Roboto-Black.ttf);
}

@font-face {
    font-family: Roboto-medium;
    src: url(./assets/fonts/Roboto-Medium.ttf);
}

@font-face {
    font-family: Roboto-thin;
    src: url(./assets/fonts/Roboto-Thin.ttf);
}

@font-face {
    font-family: Roboto-regular;
    src: url(./assets/fonts/Roboto-Regular.ttf);
}

@font-face {
    font-family: RobotoLight;
    src: url(./assets/fonts/Roboto-Light.ttf);
}*/

.font-size-16 {
  font-size: 16px;
}

.font-size-13 {
  font-size: 13px !important;
}

.font-size-12 {
  font-size: 12px !important;
}

.font-size-11 {
  font-size: 12px !important;
}

.font-size-10 {
  font-size: 10px !important;
}

li {
  list-style: none;
}

.list-style-disc {
  list-style: disc;
}

.choose-your-design--sec {
  .selected-icon {
    height: 20px;
    right: 5px;
    top: 5px;
    width: 20px;
  }
  .selected-icon-next {
    top: 110px;
  }
}

.selected-icon {
  height: 20px;
  right: 5px;
  top: 5px;
}

.hide {
  display: none !important;
}

.design-detials--sec {
  background: #000;
  margin: 2% 2% 0;
  color: @color_1;
  padding: 2%;
  width: 96%;
  display: inline-block;
}

.home .carousel-inner {
  height: 155px;
}

.home .carousel-inner > .item > img,
.home .carousel-inner > .item > a > img {
  width: 70%;
  margin: auto;
}

.carousel {
  position: relative;
}

.color-carousel li {
  width: 30%;
  font-size: 10px;
  float: left;
  margin-right: 3%;
  position: relative;
}

.carousel-control.left {
  left: -7%;
  transform: scale(-1);
  background-image: none;
}

.carousel-control.right {
  right: -7%;
  background-image: none;
}

.color-carousel li.margin-right1-5 {
  margin-right: 1.5%;
}

.color-carousel li.margin-left1-5 {
  margin-left: 1.8%;
}

.color-carousel li.margin-r-0 {
  margin-right: 0;
}

.color-carousel li > div {
  border: 1px solid #5a5c5b;
  height: 70px;
}

.color-carousel li p {
  margin: 3px 0;
}

.carousel1 .carousel-control {
  opacity: 0.8;
}

.carousel1 .carousel-control.left {
  left: -10px;
}

.carousel1 .carousel-control.left img {
  transform: rotate(180deg);

}

.carousel1 .carousel-control.right {
  right: -10px;
}

.carousel1 .coming-soon {
  right: 0;
  height: 25px;
}

.carousel-inner > .item {
  padding: 10px 0;
}

.carousel-inner > .item .play-button {
  height: 34px;
  float: left;
  margin-right: 4px;
}

.carousel-inner > .item > div > div {
  min-height: 140px;
}

.carousel-inner .image-sec {
  /*height: 80px;*/
  height: 95px;
  padding: 0 15px;
}

.color-carousel li.margin-left1-5 {
  margin-left: 1.8%;
}

.helper {
  height: 100%;
  vertical-align: middle;
}

.left-arrow {
  height: 30px;
}

.right-arrow {
  height: 30px;
}

.display-none {
  display: none;
}

.display-block {
  display: block;
}

@media screen and (max-width: 735px) and (min-width: 414px) {
  .img-behr {
    width: 50px;
  }
}

.box-shadow {
  box-shadow: 0 0 5px #888;
}

.bg-white {
  background-color: #fff;
}

/* glass door */
.glass-carousel .item > span {
  border: 1px solid #ccc;
  padding: 5px;
  float: left;
  width: 31%;
  font-size: 7px;
  margin: 0 5px 10px 0;
  min-height: 94px;
  text-align: center;
}

.glass-carousel .item > span:last-child {
  margin-right: 0;
}

.glass-carousel .item > span:first-child {
  margin-left: 3px;
}

#footer {
  background: #eeeeee;
  border-top: 1px solid #cccccc;
  position: fixed;
  bottom: 0;
  z-index: 6;
  left: 0;
  a {
    text-transform: uppercase;
    color: #f96302;
    font-size: 15px;
    text-decoration: none;
    font-weight: bold;
  }
  img {
    height: 15px;
    margin-top: -4px;
  }
}

.landscape-img {
  display: none;
}

.banner-zip-search {
  font-size: 17px;
}

//736
@media only screen and (min-width: 736px) {
  .form-control {
    margin-left: 53px;
    width: 75% !important;
  }

  .banner-zip-search {
    input {
      padding-left: 41%;
    }
  }

  .modal-open {
    .modal {
      overflow-x: hidden;
      overflow-y: auto;
      top: 55px !important;
    }
  }

  .modal {
    top: 14% !important;
  }

  .banner-zip-search {
    .error {
      margin-right: 105px !important;
    }
  }

}

//414
@media only screen and (min-width: 414px) {
  .modal {
    top: 7.5% !important;
  }
}

//640
@media only screen and (min-width: 640px) {
  .form-control {
    margin-left: 40px;
    width: 75% !important;
  }

  .banner-zip-search {
    input {
      padding-left: 39%;
    }
  }

  .modal {
    top: 15.5% !important;
  }

  .modal-open {
    .modal {
      overflow-x: hidden;
      overflow-y: auto;
      top: 15.5% !important;
    }
  }

  .modal {
    top: 15% !important;
  }

  .banner-zip-search {
    .error {
      margin-right: 84px;
    }
  }

}

//360
@media only screen and (min-width: 320px) {
  /*  .modal {
          top: 8% !important;
      }*/
  .modal-open {
    .modal {
      top: 56px !important;
    }
  }

  .banner-image {
    min-height: 228px !important;
  }

}

@media only screen and (min-width: 360px) {
  /*  .modal {
          top: 8% !important;
      }*/
  .modal-open {
    .modal {
      top: 56px !important;
    }
  }

  .banner-image {

    min-height: 300px !important;

  }

}

@media only screen and (min-width: 375px) {

  .modal-open {
    .modal {
      top: 56px !important;
    }
  }

  .banner-image {

    min-height: 326px !important;

  }

}

@media only screen and (min-width: 412px) {

  .modal-open {
    .modal {
      top: 56px !important;
    }
  }

  .banner-image {

    min-height: 320px !important;

  }

}

@media only screen and (min-width: 568px) {
  .form-control {
    margin-left: 30px;
    width: 80% !important;
  }

  .banner-zip-search {
    input {
      padding-left: 39%;
    }
  }

  .col-xs-10 {
    width: 91.66666667% !important;
  }

  .col-xs-offset-2 {
    margin-left: 8.33333333% !important;
  }

  .landscape-img {
    display: block;
  }

  .portrait-img {
    display: none;
  }

  .col-xs-2 {
    width: 8.33333333% !important;
  }

  .modal-open {
    .modal {
      top: 17%;
    }
  }

  //  modals
  .modal-open {
    .details-modal.modal {
      top: 59%;
      width: 93%;
      left: 8%;
    }
  }

  .banner-image {

    min-height: 270px !important;

  }
}

body.loader {
  .spinner {
    display: block;
  }
}

.spinner {
  width: 100vw;
  height: 100vh;
  background: #ccc;
  opacity: 0.5;
  display: none;
  z-index: 15;
  img {
    width: 50px;
    top: 50%;
    position: absolute;
    left: 50%;
    margin-left: -25px;
    margin-top: -25px;
  }
}

.inline-block {
  display: inline-block;
}

.transform-rotate-minus-90 {
  -webkit-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.btn-lg {
  padding: 10px 27px !important;
  font-size: 14px !important;
  font-weight: bold !important;
}

.carousel-control {
  background-image: none !important;
  width: auto !important;
}

.carousel-control.right {
  right: -8% !important;
}

.forward-img {
  height: 15px;
  vertical-align: text-top;
}

.margin20tb {
  margin: 20px 0;
}

h4, h4.font-size-16 {
  font-size: 16px !important;
}

